--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "easy-webdev-startpack",
+  "name": "test-21",
   "version": "3.1.1",
-  "description": "HTML5+CSS3 template for easy start website project'",
+  "description": "lvov",
   "main": "gulpfile.js",
   "scripts": {
     "html": "gulp",
